<resources>
    <string name="app_name">Just Java</string>
    <string name="nameHint">Name</string>
    <string name="topppings">Toppings</string>
    <string name="cream">Whipped Cream</string>
    <string name="chococlate">Chocolate</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity:</string>
    <string name="thank_you">Thank You!</string>
    <string name="add_cream">Add Whipped Cream?</string>
    <string name="add_choco">Add Chocolate?</string>
    <string name="howMany">Quantity</string>
    <string name="total">Total: </string>
</resources>
